# roaster

./: .gitignore  README.md  TODO.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2ea9f86f6014_order.py  869b8d7c6d3a_add_orders.py  a0bf18c4505d_.py  aaf1bdd3e5b6_order.py  b36a6f1528da_.py  d5ea7209c865_first.py
backend/app/: database.py  db_enums.py  main.py
backend/app/core/: auth.py  config.py
backend/app/enums/: batch_status.py  order.py  user_role.py
backend/app/models/: __init__.py  green_bean.py  order.py  order_item.py  roasted_bean.py  roasting_batch.py  user.py
backend/app/routers/: auth.py  green_bean.py  user.py
backend/app/schemas/: green_bean.py  user.py
backend/app/services/: auth.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/components/: DashboardHeader.tsx
frontend/app/routes/: _index.tsx
